--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>A new line in our file!</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>This line is here to show how merging works.</p>
- <p>the index.html cntent is changed by adding new paragrSagh</p>
+ <p>the index.html cntent is changed by adding new paragragh</p>
 
 </body>
 </html>
